deployment-cryptpad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cryptpad
spec:
  selector:
    matchLabels:
      app: cryptpad
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: cryptpad
    spec:
      containers:
      - image: promasu/cryptpad:v4.1.0-nginx-alpine
        name: cryptpad
        volumeMounts:
        - name: configjs
          mountPath: /cryptpad/config
        - name: cryptpad-data
          mountPath: /cryptpad/datastore
          subPath: datastore
        - name: cryptpad-data
          mountPath: /cryptpad/customize
          subPath: customize
        - name: cryptpad-data
          mountPath: /cryptpad/blob
          subPath: blob
        - name: cryptpad-data
          mountPath: /cryptpad/block
          subPath: block
        - name: cryptpad-data
          mountPath: /cryptpad/cfg
          subPath: cfg
        - name: cryptpad-data
          mountPath: /cryptpad/data/
          subPath: data
        livenessProbe:
          httpGet:
            path: /
            port: 3000
            httpHeaders:
            - name: LivenessProbe-Header
              value: check
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: configjs
        configMap:
          name: config.js
      - name: cryptpad-envs
        configMap:
          name: cryptpad-envs
      - name: cryptpad-data
        persistentVolumeClaim:
          claimName: cryptpad-data
