service-cryptpad.yaml
apiVersion: v1
kind: Service
metadata:
  name: cryptpad
spec:
  selector:
    app: cryptpad
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
