ingress-cryptpad.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cryptpad
spec:
  rules:
    - host: set.in.overlay
      http:
        paths:
          - backend:
              service:
                name: cryptpad
                port:
                  number: 3000
            path: /
            pathType: Prefix
